r65 (21. 06. 2022):
Added trackers for Midland Ranch Heist

r64 (20. 06. 2022):
Minor optimization in tracker reorganization
Fixed a regression that caused some progress trackers to miscalculate the current progress after dropin
Fixed an issue where "The Reckoning" achievement tracker is visible when you dropped-in
Show Timers: Fixed a possible tracker and waypoint icon corruption after dropin
Minion Tracker: Fixed reorganization issues
Trade Delay Tracker: Fixed reorganization issues
Birth of Sky: "Expert Landing" achievement will now show 1 tracker, not 2
Undercover: Fixed an issue with "The Saviour" achievement tracker where it showed wrong progress after dropin

r63 (03. 06. 2022):
Big Oil Day 2: Fixed an issue where "Pager Count Tracker" is not visible

r62 (29. 05. 2022):
Dragon Heist: Fixed a game freeze

r61 (28. 05. 2022):
Updated Heli icon
Cursed Kill Room: Fixed tracker spam

r60 (26. 05. 2022):
Added Uppers Range Buff
Added Leech cooldown
Fixed a crash when PC hack had "string" value instead of a "number" value
Goat Simulator Heist Day 1: Fixed an issue where the escape duration tracker is inaccurate
Goat Simulator Heist Day 2: Fixed an issue where the first goat pickup timer hide after a second
Reservoir Dogs Day 2: Fixed an issue where the escape duration tracker is inaccurate

r59 (11. 05. 2022):
Added tracker for achievement "The Red Button"
Added tracker for achievement "Plague Doctor"
Added option "Show 'Achievement Failed' Popup"
Fixed an issue where hidden waypoints are visible when dropped-in
Fixed a crash when you were tagged by a player with Tag Team
The Ukrainian Prisoner Heist: Tracker for achievement "This Calls for a Round of Sputniks!" now shows both kills and accuracy in one tracker

r58 (05. 05. 2022):
Added buffs
Added "Show Mission Trackers" option
Added tracker for achievement "Masterpiece"
Fixed an issue where Pager Waypoints are still visible on the screen after alarm has been raised